--- a/player.html
+++ b/player.html
@@ -138,8 +138,8 @@
 </table>
 
 <script>
-  var serviceHost = "https://spotify.naush.workers.dev";
-  var spotifyUser = "Naushikha";
+  var serviceHost = "https://spotify.oscarxo.workers.dev";
+  var spotifyUser = "oscar_king62";
 
   var songData, progressSeconds, totalSeconds, progressInterval;
 
